# progetto_sir

./: CMakeLists.txt  README.md  main.cpp  sir.cpp  sir.hpp  sir.test.cpp
